--- a/index.html
+++ b/index.html
@@ -31,42 +31,42 @@
 				</div>
              	<div data-role="collapsible">
 					<h3>Neighbors</h3>
-                    <ul data-inset="true"  data-role="listview">
-                        <li><a href="#anteaters">Anteaters</a></li>
-                        <li><a href="#bearcubs">Bear Cubs</a></li>
-                        <li><a href="#bears">Bears</a></li>
-                        <li><a href="#birds">Birds</a></li>
-                        <li><a href="#bulls">Bulls</a></li>
-                        <li><a href="#cats">Cats</a></li>
-                        <li><a href="#chickens">Chickens</a></li>
-                        <li><a href="#cows">Cows</a></li>
-                        <li><a href="#crocodiles">Crocodiles</a></li>
-                        <li><a href="#deer">Deer</a></li>
-                        <li><a href="#dogs">Dogs</a></li>
-                        <li><a href="#ducks">Ducks</a></li>
-                        <li><a href="#eagles">Eagles</a></li>
-                        <li><a href="#elephants">Elephants</a></li>
-                        <li><a href="#frogs">Frogs</a></li>
-                        <li><a href="#goats">Goats</a></li>
-                        <li><a href="#gorillas">Gorillas</a></li>
-                        <li><a href="#hamsters">Hamsters</a></li>
-                        <li><a href="#hippopotamuses">Hippopotamuses</a></li>
-                        <li><a href="#horses">Horses</a></li>
-                        <li><a href="#kangaroos">Kangaroos</a></li>
-                        <li><a href="#koalas">Koalas</a></li>
-                        <li><a href="#lions">Lions</a></li>
-                        <li><a href="#monkeys">Monkeys</a></li>
-                        <li><a href="#mice">Mice</a></li>
-                        <li><a href="#octopuses">Octopuses</a></li>
-                        <li><a href="#ostriches">Ostriches</a></li>
-                        <li><a href="#penguins">Penguins</a></li>
-                        <li><a href="#pigs">Pigs</a></li>
-                        <li><a href="#rabbits">Rabbits</a></li>
-                        <li><a href="#rhinoceroses">Rhinoceroses</a></li>
-                        <li><a href="#sheep">Sheep</a></li>
-                        <li><a href="#squirrels">Squirrels</a></li>
-                        <li><a href="#tigers">Tigers</a></li>
-                        <li><a href="#wolves">Wolves</a></li>
+                    <ul data-inset="true" data-role="listview">
+                        <li><a href="#anteaters" data-transition="flow">Anteaters</a></li>
+                        <li><a href="#bearcubs" data-transition="flow">Bear Cubs</a></li>
+                        <li><a href="#bears" data-transition="flow">Bears</a></li>
+                        <li><a href="#birds" data-transition="flow">Birds</a></li>
+                        <li><a href="#bulls" data-transition="flow">Bulls</a></li>
+                        <li><a href="#cats" data-transition="flow">Cats</a></li>
+                        <li><a href="#chickens" data-transition="flow">Chickens</a></li>
+                        <li><a href="#cows" data-transition="flow">Cows</a></li>
+                        <li><a href="#crocodiles" data-transition="flow">Crocodiles</a></li>
+                        <li><a href="#deer" data-transition="flow">Deer</a></li>
+                        <li><a href="#dogs" data-transition="flow">Dogs</a></li>
+                        <li><a href="#ducks" data-transition="flow">Ducks</a></li>
+                        <li><a href="#eagles" data-transition="flow">Eagles</a></li>
+                        <li><a href="#elephants" data-transition="flow">Elephants</a></li>
+                        <li><a href="#frogs" data-transition="flow">Frogs</a></li>
+                        <li><a href="#goats" data-transition="flow">Goats</a></li>
+                        <li><a href="#gorillas" data-transition="flow">Gorillas</a></li>
+                        <li><a href="#hamsters" data-transition="flow">Hamsters</a></li>
+                        <li><a href="#hippopotamuses" data-transition="flow">Hippopotamuses</a></li>
+                        <li><a href="#horses" data-transition="flow">Horses</a></li>
+                        <li><a href="#kangaroos" data-transition="flow">Kangaroos</a></li>
+                        <li><a href="#koalas" data-transition="flow">Koalas</a></li>
+                        <li><a href="#lions" data-transition="flow">Lions</a></li>
+                        <li><a href="#monkeys" data-transition="flow">Monkeys</a></li>
+                        <li><a href="#mice" data-transition="flow">Mice</a></li>
+                        <li><a href="#octopuses" data-transition="flow">Octopuses</a></li>
+                        <li><a href="#ostriches" data-transition="flow">Ostriches</a></li>
+                        <li><a href="#penguins" data-transition="flow">Penguins</a></li>
+                        <li><a href="#pigs" data-transition="flow">Pigs</a></li>
+                        <li><a href="#rabbits" data-transition="flow">Rabbits</a></li>
+                        <li><a href="#rhinoceroses" data-transition="flow">Rhinoceroses</a></li>
+                        <li><a href="#sheep" data-transition="flow">Sheep</a></li>
+                        <li><a href="#squirrels" data-transition="flow">Squirrels</a></li>
+                        <li><a href="#tigers" data-transition="flow">Tigers</a></li>
+                        <li><a href="#wolves" data-transition="flow">Wolves</a></li>
                     </ul>
                  </div>
              </div>
@@ -84,9 +84,7 @@
             	<h1>Anteaters</h1>
              </div>
              <div data-role="content">
-             	<div>
-					<ul id="anteaterlist" data-inset="true"  data-role="listview">
-					</ul>
+             	<div id="anteaterlist">
                 </div>
              </div>
              <div data-role="footer" data-position="fixed" data-id="nav">
