--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
              	<div data-role="collapsible">
 					<h3>Neighbors</h3>
                     <ul data-inset="true" data-role="listview">
+						<li><a href="#all" data-transition="flow">All</a></li>
                         <li><a href="#anteaters" data-transition="flow">Anteaters</a></li>
                         <li><a href="#bearcubs" data-transition="flow">Bear Cubs</a></li>
                         <li><a href="#bears" data-transition="flow">Bears</a></li>
@@ -69,6 +70,23 @@
                         <li><a href="#wolves" data-transition="flow">Wolves</a></li>
                     </ul>
                  </div>
+             </div>
+             <div data-role="footer" data-position="fixed" data-id="nav">
+				<div data-role="navbar">
+					<ul>
+						<li><a href="#home" data-icon="home">Home</a></li>
+						<li><a href="#myTown" data-icon="star">My Town</a></li>
+					</ul>
+				</div>
+        	</div>
+        </div>
+		<div data-add-back-btn="true" data-role="page" id="all" data-theme="a">
+        	<div data-role="header" data-position="fixed">
+            	<h1>All Neighbors</h1>
+             </div>
+             <div data-role="content">
+             	<div id="alllist">
+                </div>
              </div>
              <div data-role="footer" data-position="fixed" data-id="nav">
 				<div data-role="navbar">
